--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,23 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="ru">
-<head>
-  <meta charset="utf-8">
-  <title>Angular Test Task For Nekta</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-</head>
-<body>
-  <app-root></app-root>
-</body>
+  <head>
+    <meta charset="utf-8" />
+    <title>Angular Test Task For Nekta</title>
+    <base href="/" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="icon" type="image/x-icon" href="favicon.ico" />
+  </head>
+  <body>
+    <header class="header">Тестовое задание для NEKTA</header>
+    <app-root></app-root>
+    <footer class="footer">
+      <p class="footer__text">2024</p>
+      <a
+        href="https://github.com/NatalieKalinkina"
+        target="_blank"
+        class="footer__text link"
+        >Natalie Kalinkina</a
+      >
+    </footer>
+  </body>
 </html>
