--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
       <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
-  <body>
+  <body class="mat-typography">
     <header class="header">Тестовое задание для NEKTA</header>
     <app-root></app-root>
     <footer class="footer">
